fix grammar and text align

--- a/main.css
+++ b/main.css
@@ -25,11 +25,11 @@ nav {
     justify-content: center;
 }
 
-nav ul li {
+nav li {
     flex-direction: row;
     display: inline;
     margin: 0 5% 0 5%;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 nav a {
@@ -50,7 +50,7 @@ ul {
 }
 
 p {
-    text-align: center; 
+    text-align: left; 
 }
 
 .bio ul {
@@ -180,6 +180,12 @@ footer {
     color: black;
 }
 
+@media screen and (min-width: 400px) {
+    nav li {
+        font-size: 20px;
+    }
+}
+
 @media screen and (min-width: 770px) {
     body {
         font-size: 35px;
@@ -190,7 +196,7 @@ footer {
     }
 
     p {
-        text-align: center;
+        text-align: left;
     }
 
     .project-container {
@@ -211,7 +217,7 @@ footer {
     }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1025px) {
     body {
         padding-top: 70px !important; 
         margin: 0;
